[package]
name = "bevy_window_sdl2_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_math = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_window = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_platform = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
bevy_log = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }

raw-window-handle = "0.6.2"
sdl2 = { version = "0.37.0", features = [
  "raw-window-handle",
  "bundled",
  "static-link",
] }
wgpu = "25.0.2"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "df5dfcd2988fd" }
